--- a/javascript/interview/my.html
+++ b/javascript/interview/my.html
@@ -26,7 +26,7 @@
         var btnOK = document.querySelector('input[type=button]');
         btnOK.addEventListener("click", showInfo);
         function showInfo(){
-            document.getElementById("showInfo").innerHTML = '<a href="http://www.mysoft.com.cn">明源软件</a>';
+            document.getElementById("showInfo").innerHTML = '<a href="http://www.baidu.com">百度</a>';
         }
     </script>
 </body>
